--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.1
+specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
@@ -8,25 +8,19 @@ dataSources:
     source:
       address: "0x5cAf454Ba92e6F2c929DF14667Ee360eD9fD5b26"
       abi: DevToken
+      startBlock: 14461492
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
-        - Approval
-        - MinterAdded
-        - MinterRemoved
         - Transfer
       abis:
         - name: DevToken
           file: ./abis/DevToken.json
+        - name: EternalStorage
+          file: ./abis/EternalStorage.json
       eventHandlers:
-        - event: Approval(indexed address,indexed address,uint256)
-          handler: handleApproval
-        - event: MinterAdded(indexed address)
-          handler: handleMinterAdded
-        - event: MinterRemoved(indexed address)
-          handler: handleMinterRemoved
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
       file: ./src/mapping.ts
